# cpp-template

./: .gitignore  CMakeLists.txt  README.md  apt_packages.txt  conanfile.txt  requirements.txt
.github/workflows/: codeql-analysis.yml  macos.yml  ubuntu.yml  windows.yml
cmake/: Config.cmake  config.cmake  defaults.cmake
cmake/defaults/: CompilerWarnings.cmake  Conan.cmake  Errors.cmake  PVSStudio.cmake  Sanitizers.cmake  Windows.cmake
dependencies/: apt.txt
inc/arithmetic/: arithmetic.hpp
inc/operations/: operations.hpp
src/: arithmetic.cpp  main.cpp  operations.cpp
src/arithmetic/: arithmetic.cpp
